--- a/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.fr.resx
+++ b/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.fr.resx
@@ -153,8 +153,17 @@
   <data name="btnOKResource1.ServerSide" xml:space="preserve">
     <value>True</value>
   </data>
+  <data name="cbIssueCreditNoteResource1.BoxLabel" xml:space="preserve">
+    <value>{FR}Issue Credit Note For This Adjustment</value>
+  </data>
+  <data name="CommentTextBoxResource1.Label" xml:space="preserve">
+    <value>{FR}Comment</value>
+  </data>
   <data name="ddBillingPeriod1.Label" xml:space="preserve">
     <value>Période de facturation</value>
+  </data>
+  <data name="ddTemplateTypesResource1.Label" xml:space="preserve">
+    <value>{FR}Credit Note Template To Use</value>
   </data>
   <data name="ddReasonCodeResource1.AllowBlank" xml:space="preserve">
     <value>False</value>
@@ -170,6 +179,9 @@
   </data>
   <data name="MTPanel1Resource1.Text" xml:space="preserve">
     <value>Émettre un ajustement divers</value>
+  </data>
+  <data name="MTPanel2Resource1.Text" xml:space="preserve">
+    <value>{FR}Issue Credit Note For This Adjustment</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
     <value>MetraNet</value>
