--- a/RMP/Extensions/Core/config/Localization/Approvals/Approvals_de.xml
+++ b/RMP/Extensions/Core/config/Localization/Approvals/Approvals_de.xml
@@ -35,6 +35,14 @@
         <Value>Datum des Produktangebots ändern</Value>
       </locale_entry>
       <locale_entry>
+        <Name>Approvals/ChangeType/Subscription.Add</Name>
+        <Value>[DE]New Subscription</Value>
+      </locale_entry>
+      <locale_entry>
+        <Name>Approvals/ChangeType/Subscription.Update</Name>
+        <Value>[DE]Subscription Update</Value>
+      </locale_entry>
+      <locale_entry>
         <Name>Approvals/ChangeType/GroupSubscription.AddMemberHierarchies</Name>
         <Value>Gruppennutzungsanmeldung: Mitgliederhierarchie hinzufügen</Value>
       </locale_entry>
