--- a/RMP/Extensions/Core/config/Localization/Approvals/Approvals_it.xml
+++ b/RMP/Extensions/Core/config/Localization/Approvals/Approvals_it.xml
@@ -35,6 +35,14 @@
         <Value>Data offerta di prodotti aggiornata</Value>
       </locale_entry>
       <locale_entry>
+        <Name>Approvals/ChangeType/Subscription.Add</Name>
+        <Value>[IT]New Subscription</Value>
+      </locale_entry>
+      <locale_entry>
+        <Name>Approvals/ChangeType/Subscription.Update</Name>
+        <Value>[IT]Subscription Update</Value>
+      </locale_entry>
+      <locale_entry>
         <Name>Approvals/ChangeType/GroupSubscription.AddMemberHierarchies</Name>
         <Value>Abbonamento di gruppo: Aggiungi gerarchia membro</Value>
       </locale_entry>
