--- a/RMP/Extensions/Core/config/Localization/Approvals/Approvals_ja.xml
+++ b/RMP/Extensions/Core/config/Localization/Approvals/Approvals_ja.xml
@@ -35,6 +35,14 @@
         <Value>ご利用プラン日の更新</Value>
       </locale_entry>
       <locale_entry>
+        <Name>Approvals/ChangeType/Subscription.Add</Name>
+        <Value>[JA]New Subscription</Value>
+      </locale_entry>
+      <locale_entry>
+        <Name>Approvals/ChangeType/Subscription.Update</Name>
+        <Value>[JA]Subscription Update</Value>
+      </locale_entry>
+      <locale_entry>
         <Name>Approvals/ChangeType/GroupSubscription.AddMemberHierarchies</Name>
         <Value>グループ利用: メンバー階層の追加</Value>
       </locale_entry>
