--- a/config/Localization/Approvals/Approvals_es.xml
+++ b/config/Localization/Approvals/Approvals_es.xml
@@ -35,6 +35,14 @@
         <Value>Actualización de la fecha de oferta de producto</Value>
       </locale_entry>
       <locale_entry>
+        <Name>Approvals/ChangeType/Subscription.Add</Name>
+        <Value>[ES]New Subscription</Value>
+      </locale_entry>
+      <locale_entry>
+        <Name>Approvals/ChangeType/Subscription.Update</Name>
+        <Value>[ES]Subscription Update</Value>
+      </locale_entry>
+      <locale_entry>
         <Name>Approvals/ChangeType/GroupSubscription.AddMemberHierarchies</Name>
         <Value>Suscripción de grupo: añadir jerarquía de miembro</Value>
       </locale_entry>
