--- a/Subscriptions/App_LocalResources/SetSubscriptionDate.aspx.en-GB.resx
+++ b/Subscriptions/App_LocalResources/SetSubscriptionDate.aspx.en-GB.resx
@@ -147,4 +147,16 @@
     <data name="StartDateResource1.Label" xml:space="preserve">
         <value>Start Date</value>
     </data>
+	<data name="newSubscription" xml:space="preserve">
+		<value>[EN_GB]New Subscription</value>
+	</data>
+	<data name="pendingChangeUiErrorFormat" xml:space="preserve">
+		<value>[EN_GB]This Subscription has {0} type pending change. This type of change does not allow more than one pending changes.</value>
+	</data>
+	<data name="pendingChangeWarningFormat" xml:space="preserve">
+		<value>[EN_GB]This Subscription has {0} type pending change.{1} Click here to view pending changes.</value>
+	</data>
+	<data name="updateSubscription" xml:space="preserve">
+		<value>[EN_GB]Subscription Update</value>
+	</data>
 </root>
