FEAT-3096 Optionally Issue Credit Note Document... FEAT-3158 Update btnOK_Click button in MetraNet/Adjustments/IssueMiscellaneousAdjustment.aspx page

--- a/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.ja.resx
+++ b/Adjustments/App_LocalResources/IssueMiscellaneousAdjustment.aspx.ja.resx
@@ -273,4 +273,10 @@
   <data name="adjAmountFldResourceTaxTotal.Label" xml:space="preserve">
     <value>[ja] Total Adjustment Being Issued</value>
   </data>
+  <data name="TEXT_CREDIT_NOTE_CREATED" xml:space="preserve">
+    <value>{JA}A credit note for this Miscellaneous Adjustment was created.</value>
+  </data>
+  <data name="TEXT_CREDIT_NOTE_PENDING" xml:space="preserve">
+    <value>{JA}A credit note for this Miscellaneous Adjustment will be created when this Miscellaneous Adjusment is approved.</value>
+  </data>
 </root>
