FEAT-3149 - Approval of independent subscriptions
Task : FEAT-3338 - [Issue] User doesn't see if updating of the subscription fails validation

reviewed by NKuklich

--- a/App_GlobalResources/JSConsts.de.resx
+++ b/App_GlobalResources/JSConsts.de.resx
@@ -1186,4 +1186,7 @@
     <data name="ERROR_BILL_MESSAGE_DATES" xml:space="preserve">
     <value>German</value>
   </data>
+   <data name="ERROR_SUBSCRIPTION_STARTDATE_BIGGER_ENDDATE" xml:space="preserve">
+    <value>[de]Start Date can't be greater than End Date</value>
+  </data>
 </root>
