--- a/App_GlobalResources/JSConsts.en-GB.resx
+++ b/App_GlobalResources/JSConsts.en-GB.resx
@@ -1117,4 +1117,7 @@
   <data name="ERROR_BILL_MESSAGE_DATES" xml:space="preserve">
     <value>Error: End Date needs to be later than Start Date</value>
   </data>
+   <data name="ERROR_SUBSCRIPTION_STARTDATE_BIGGER_ENDDATE" xml:space="preserve">
+    <value>[en-GB]Start Date can't be greater than End Date</value>
+  </data>
 </root>
