--- a/App_GlobalResources/JSConsts.es-MX.resx
+++ b/App_GlobalResources/JSConsts.es-MX.resx
@@ -1180,4 +1180,7 @@
   <data name="ERROR_BILL_MESSAGE_DATES" xml:space="preserve">
      <value>Mexican Spanish</value>
   </data>
+   <data name="ERROR_SUBSCRIPTION_STARTDATE_BIGGER_ENDDATE" xml:space="preserve">
+    <value>[es-MX]Start Date can't be greater than End Date</value>
+  </data>
 </root>
