FEAT-3149:"Approval of independent subscriptions" Task FEAT-3372:"[Issue] Notify Link to View Pending Change when one exists not working"
Correct usage of anchor tag in notify message.

Code Reviewer: MSukhovarov

--- a/Subscriptions/App_LocalResources/SetSubscriptionDate.aspx.de.resx
+++ b/Subscriptions/App_LocalResources/SetSubscriptionDate.aspx.de.resx
@@ -154,7 +154,7 @@
 		<value>[DE]This Subscription already has a '{0}' change pending approval. A new change cannot be submitted until the previous change is either approved or denied.</value>
 	</data>
 	<data name="pendingChangeWarningFormat" xml:space="preserve">
-		<value>[DE]This Subscription already has a '{0}' change pending approval. Click here to view the pending change.</value>
+		<value>[DE]This Subscription already has a '{0}' change pending approval. &lt;a href='{1}'&gt;Click here to view the pending change.&lt;/a&gt;</value>
 	</data>
 	<data name="updateSubscription" xml:space="preserve">
 		<value>[DE]Subscription Update</value>
