--- a/ApprovalFrameworkManagement/App_LocalResources/ShowChangeItemHistory.aspx.fr.resx
+++ b/ApprovalFrameworkManagement/App_LocalResources/ShowChangeItemHistory.aspx.fr.resx
@@ -118,18 +118,21 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="TEXT_APPROVAL_AUDIT_DATE" xml:space="preserve">
-    <value>French</value>
+    <value>Date</value>
   </data>
   <data name="TEXT_APPROVAL_AUDIT_DETAILS" xml:space="preserve">
-    <value>French</value>
+    <value>Détails</value>
   </data>
   <data name="TEXT_APPROVAL_AUDIT_EVENT" xml:space="preserve">
-    <value>French </value>
+    <value>Historique des événements</value>
   </data>
   <data name="TEXT_APPROVAL_AUDIT_EVENTDISPLAYNAME" xml:space="preserve">
-    <value>French </value>
+    <value>Événement</value>
+  </data>
+  <data name="TEXT_APPROVAL_AUDIT_ID" xml:space="preserve">
+    <value>Id</value>
   </data>
   <data name="TEXT_APPROVAL_AUDIT_USER" xml:space="preserve">
-    <value>French</value>
+    <value>Nom d'utilisateur</value>
   </data>
 </root>
