FEAT-3350 Add missing 'Authentication Type' label to AddAccount.aspx.fr.resx Translations for Authentication Type Label was added to AddAccount and UpdateAccount pages Reviewer IPisanka

--- a/Account/App_LocalResources/UpdateAccount.aspx.fr.resx
+++ b/Account/App_LocalResources/UpdateAccount.aspx.fr.resx
@@ -216,4 +216,10 @@
     <data name="tbUserNameResource1.Label" xml:space="preserve">
         <value>Nom d’utilisateur</value>
     </data>
+  <data name="tbSecurityQuestionTextResource1.Label" xml:space="preserve">
+    <value>Question de sécurité</value>
+  </data>
+  <data name="tbAuthenticationTypeResource1.Label" xml:space="preserve">
+    <value>Type d'authentification</value>
+  </data>
 </root>
