--- a/RMP/Extensions/Account/config/Localization/metratech.com/metratech.com_Account_fr.xml
+++ b/RMP/Extensions/Account/config/Localization/metratech.com/metratech.com_Account_fr.xml
@@ -39,6 +39,10 @@
             <Value>Appliquer les règles de sécurité par défaut</Value>
         </locale_entry>
         <locale_entry>
+            <Name>metratech.com/account/AuthenticationType</Name>
+            <Value>Type d'authentification</Value>
+        </locale_entry>
+        <locale_entry>
             <Name>metratech.com/account/DayOfMonth</Name>
             <Value>Jour du mois</Value>
         </locale_entry>
