--- a/App_LocalResources/ChangePassword.aspx.fr.resx
+++ b/App_LocalResources/ChangePassword.aspx.fr.resx
@@ -136,12 +136,11 @@
         <value>Nom d’utilisateur</value>
     </data>
     <data name="TEXT_STANDARD_CHANGE_PASSWORD_MSG" xml:space="preserve">
-        <value>&amp;lt;ul&amp;gt;&amp;lt;li&amp;gt;Les mots de passe doivent comporter au moins 7 caractères.&amp;lt;/li&amp;gt;
-                             &amp;lt;li&amp;gt;Les mots de passe doivent être composés de caractères alphanumériques.&amp;lt;/li&amp;gt;
-                             &amp;lt;li&amp;gt;Lorsqu’il est modifié, le mot de passe doit être différent des quatre précédents mots de passe définis.&amp;lt;/li&amp;gt;&amp;lt;/ul&amp;gt;
-</value>
+        <value>&lt;ul&gt;&lt;li&gt;&amp;middot;Les mots de passe doivent comporter au moins 7 caractères.&lt;/li&gt;
+                             &lt;li&gt;&amp;middot;Les mots de passe doivent être composés de caractères alphanumériques&lt;/li&gt;
+                             &lt;li&gt;&amp;middot;Lorsqu’il est modifié, le mot de passe doit être différent des quatre précédents mots de passe définis.&lt;/li&gt;&lt;/ul&gt;</value>
     </data>
     <data name="TEXT_SU_NOTE" xml:space="preserve">
-        <value>&amp;lt;br /&amp;gt;&amp;lt;br /&amp;gt;&amp;lt;b&amp;gt;REMARQUE :&amp;lt;/b&amp;gt;  En tant que Super utilisateur, vous devrez également modifier l’entrée dans ServerAccess sur chaque machine et la crypter.</value>
+        <value>&lt;br /&gt;&lt;br /&gt;&lt;b&gt;REMARQUE :&lt;/b&gt;  En tant que Super utilisateur, vous devrez également modifier l’entrée dans ServerAccess sur chaque machine et la crypter.</value>		
     </data>
 </root>
