FEAT-3355 "Manage BillSoft Exemptions"/"Manage BillSoft Overrides" menu options are not translated Corresponding messages was added to menu localization file Reviewer IPisanka

--- a/App_GlobalResources/MainMenu.fr.resx
+++ b/App_GlobalResources/MainMenu.fr.resx
@@ -366,6 +366,12 @@
   <data name="TEXT_MANAGE_SECURITY" xml:space="preserve">
     <value>Gérer la sécurité</value>
   </data>
+  <data name="TEXT_MANAGE_BILLSOFT_EXEMPTIONS" xml:space="preserve">
+    <value>Gérer BillSoft Exonérations</value>
+  </data>
+  <data name="TEXT_MANAGE_BILLSOFT_OVERRIDES" xml:space="preserve">
+    <value>Gérer BillSoft Remplacements</value>
+  </data>  
   <data name="TEXT_MENU_GENERATE_PASSWORD" xml:space="preserve">
     <value>Générer un mot de passe</value>
   </data>
