--- a/App_GlobalResources/MainMenu.resx
+++ b/App_GlobalResources/MainMenu.resx
@@ -121,7 +121,7 @@
         <value>Account Details</value>
     </data>
     <data name="TEXT_ACCOUNT_QUOTING_LIST" xml:space="preserve">
-        <value>Manage Quoting</value>
+        <value>Quotes</value>
     </data>
     <data name="TEXT_ACCOUNT_STATE" xml:space="preserve">
         <value>Account State</value>
@@ -481,10 +481,10 @@
         <value>Queue Adhoc Reports</value>
     </data>
     <data name="TEXT_QUOTING" xml:space="preserve">
-        <value>Quoting</value>
+        <value>Manage Quotes</value>
     </data>
     <data name="TEXT_QUOTING_LIST" xml:space="preserve">
-        <value>Manage Quoting</value>
+        <value>View All Quotes</value>
     </data>
     <data name="TEXT_REFRESH" xml:space="preserve">
         <value>Refresh</value>
