FEAT-3358 The menu option "Account Details->Assign Bill Messages" is not translated Also messages for Approvals menu item was translated to French

--- a/App_GlobalResources/MainMenu.de.resx
+++ b/App_GlobalResources/MainMenu.de.resx
@@ -582,4 +582,7 @@
   <data name="TEXT_MANAGE_AMP_DECISIONS" xml:space="preserve">
     <value>German</value>
   </data>
+  <data name="TEXT_ASSIGN_BILL_MESSAGES" xml:space="preserve">
+    <value>German</value>
+  </data>
 </root>
