--- a/App_GlobalResources/MainMenu.es-MX.resx
+++ b/App_GlobalResources/MainMenu.es-MX.resx
@@ -567,4 +567,7 @@
   <data name="TEXT_MANAGE_AMP_DECISIONS" xml:space="preserve">
     <value>Spanish</value>
   </data>
+  <data name="TEXT_ASSIGN_BILL_MESSAGES" xml:space="preserve">
+    <value>Spanish</value>
+  </data>
 </root>
