FEAT-2548 UI: Basic Listing Screen To View Quotes Issued (based on MTFilterGrid)      FEAT-3381 [DEV] Create ajax service to call QuotingService methods for UI page      FEAT-3376 DEV] Create page with grid for display and manage list of quotes
Code Reviewer: YZapara

--- a/RMP/Extensions/Core/config/Localization/metratech.com/metratech.com_us.xml
+++ b/RMP/Extensions/Core/config/Localization/metratech.com/metratech.com_us.xml
@@ -195,6 +195,22 @@
             <Value>Prebill Adjustment Amount</Value>
         </locale_entry>
         <locale_entry>
+            <Name>metratech.com/QuoteStatus/Complete</Name>
+            <Value>Complete</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/QuoteStatus/Failed</Name>
+            <Value>Failed</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/QuoteStatus/InProgress</Name>
+            <Value>InProgress</Value>
+        </locale_entry>
+        <locale_entry>
+            <Name>metratech.com/QuoteStatus/None</Name>
+            <Value>None</Value>
+        </locale_entry>
+        <locale_entry>
             <Name>metratech.com/SaleForceRelationship/Account Development</Name>
             <Value>Account Development</Value>
         </locale_entry>
