--- a/Quoting/App_LocalResources/QuoteList.aspx.resx
+++ b/Quoting/App_LocalResources/QuoteList.aspx.resx
@@ -112,15 +112,15 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>Quotes List</value>
-  </data>
   <data name="PageResource1.Title" xml:space="preserve">
     <value>MetraNet - Quotes List</value>
+  </data>
+  <data name="QuoteListTitle.Text" xml:space="preserve">
+    <value>Quotes List</value>
   </data>
 </root>
