FEAT-2548 UI: Basic Listing Screen To View Quotes Issued (based on MTFilterGrid)          FEAT-3376[DEV] Create page with grid for display and manage list of quotes          FEAT-3381 [DEV] Create ajax service to call QuotingService methods for UI page
Code Reviewer: YZapara

--- a/Quoting/App_LocalResources/QuoteList.aspx.resx
+++ b/Quoting/App_LocalResources/QuoteList.aspx.resx
@@ -141,6 +141,15 @@
     <data name="QUOTE_STATUS" xml:space="preserve">
         <value>Quote status</value>
     </data>
+    <data name="REPORT_LINK" xml:space="preserve">
+        <value>Report link</value>
+    </data>
+    <data name="STATUS_CLEANUP" xml:space="preserve">
+        <value>Status cleanup</value>
+    </data>
+    <data name="STATUS_REPORT" xml:space="preserve">
+        <value>Status report</value>
+    </data>
     <data name="TOTAL_AMOUNT" xml:space="preserve">
         <value>Total amount</value>
     </data>
