FEAT-3300:"View subscription details when approving a subscription create or update" Task FEAT-3370:"Implement logic for retrieving and displaying Account Icon"
1. Add load of account properties and icon;
2. Share localized ChageType names in global resource across multiple pages.

Code Reviewer: MSukhovarov

--- a/App_GlobalResources/Resource.es-MX.resx
+++ b/App_GlobalResources/Resource.es-MX.resx
@@ -507,4 +507,10 @@
 	<data name="TEXT_FROM_PARAMETER_TABLE" xml:space="preserve">
     <value>From parameter table (Mexican Spanish)</value>
   </data>
+  <data name="newSubscription" xml:space="preserve">
+    <value>[ES-MX]New Subscription</value>
+  </data>
+  <data name="updateSubscription" xml:space="preserve">
+    <value>[ES-MX]Subscription Update</value>
+  </data>
 </root>
