--- a/App_GlobalResources/Resource.en-GB.resx
+++ b/App_GlobalResources/Resource.en-GB.resx
@@ -507,4 +507,10 @@
   <data name="TEXT_FROM_PARAMETER_TABLE" xml:space="preserve">
     <value>From parameter table</value>
   </data>
+  <data name="newSubscription" xml:space="preserve">
+    <value>[EN-GB]New Subscription</value>
+  </data>
+  <data name="updateSubscription" xml:space="preserve">
+    <value>[EN-GB]Subscription Update</value>
+  </data>
 </root>
