--- a/App_GlobalResources/Resource.es.resx
+++ b/App_GlobalResources/Resource.es.resx
@@ -549,4 +549,10 @@
 	<data name="TEXT_FROM_PARAMETER_TABLE" xml:space="preserve">
     <value>From parameter table (Spanish)</value>
   </data>
+  <data name="newSubscription" xml:space="preserve">
+    <value>[ES]New Subscription</value>
+  </data>
+  <data name="updateSubscription" xml:space="preserve">
+    <value>[ES]Subscription Update</value>
+  </data>
 </root>
