--- a/App_GlobalResources/Resource.it.resx
+++ b/App_GlobalResources/Resource.it.resx
@@ -549,4 +549,10 @@
 	<data name="TEXT_FROM_PARAMETER_TABLE" xml:space="preserve">
     <value>From parameter table (Italian)</value>
   </data>
+  <data name="newSubscription" xml:space="preserve">
+    <value>[IT]New Subscription</value>
+  </data>
+  <data name="updateSubscription" xml:space="preserve">
+    <value>[IT]Subscription Update</value>
+  </data>
 </root>
