--- a/App_GlobalResources/Resource.pt-br.resx
+++ b/App_GlobalResources/Resource.pt-br.resx
@@ -528,4 +528,10 @@
 	<data name="TEXT_FROM_PARAMETER_TABLE" xml:space="preserve">
     <value>From parameter table (Brazil)</value>
   </data>
+  <data name="newSubscription" xml:space="preserve">
+    <value>[PT-BR]New Subscription</value>
+  </data>
+  <data name="updateSubscription" xml:space="preserve">
+    <value>[PT-BR]Subscription Update</value>
+  </data>
 </root>
