--- a/App_GlobalResources/Resource.resx
+++ b/App_GlobalResources/Resource.resx
@@ -582,4 +582,10 @@
   <data name="_PropertyForm_cshtml_Set_Localization_Title" xml:space="preserve">
     <value>Set Localization</value>
   </data>
+  <data name="newSubscription" xml:space="preserve">
+    <value>New Subscription</value>
+  </data>
+  <data name="updateSubscription" xml:space="preserve">
+    <value>Subscription Update</value>
+  </data>
 </root>
