Revert "Merge branch 'feature/Partitions' of https://github.com/MetraTech/MetraNetDev into feature/Partitions"
This reverts commit 24438a8d4503fd462f62aed302724a2c459ea7a5, reversing
changes made to 198fc35da924b4b151aa3c4f010446975430a852.

--- a/Account/App_LocalResources/UpdateSystemAccount.aspx.fr.resx
+++ b/Account/App_LocalResources/UpdateSystemAccount.aspx.fr.resx
@@ -123,9 +123,6 @@
   <data name="LblAncestorAccount.Label" xml:space="preserve">
     <value>Compte-parent</value>
   </data>
-  <data name="LblAuthenticationType.Label" xml:space="preserve">
-    <value>Type d'authentification</value>
-  </data>
   <data name="LblBrandedSite.Label" xml:space="preserve">
     <value>Site de marque</value>
   </data>
@@ -160,7 +157,7 @@
     <value>MetraNet</value>
   </data>
   <data name="PendingChangeWarning" xml:space="preserve">
-    <value>Ce compte a déjà une modification en attente dans la Approval Framework file. {0}  Cliquez ici pour voir les modifications en attente.</value>
+    <value>French {0}</value>
   </data>
   <data name="pnlAccountInfoResource1.Text" xml:space="preserve">
     <value>Informations du compte</value>
