--- a/MetraOffer/ProductOfferings/App_LocalResources/ProductOfferingsList.aspx.resx
+++ b/MetraOffer/ProductOfferings/App_LocalResources/ProductOfferingsList.aspx.resx
@@ -117,46 +117,61 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-    <data name="CREATION_DATE" xml:space="preserve">
-        <value>Creation date</value>
-    </data>
-    <data name="CURRENCY" xml:space="preserve">
-        <value>Currency</value>
-    </data>
-    <data name="ID_QUOTE" xml:space="preserve">
-        <value>Id Quote</value>
-    </data>
-    <data name="MTTitle1Resource1.Text" xml:space="preserve">
-        <value>Quotes List</value>
-    </data>
-  <data name="PageResource1.Title" xml:space="preserve">
-    <value>MetraNet - Quotes List</value>
+  <data name="GRID_TITLE" xml:space="preserve">
+    <value>Product Offerings</value>
   </data>
-    <data name="QUOTE_ACCOUNTS" xml:space="preserve">
-        <value>Accounts</value>
-    </data>
-    <data name="QUOTE_DESCRIPTION" xml:space="preserve">
-        <value>Quote description</value>
-    </data>
-    <data name="QUOTE_STATUS" xml:space="preserve">
-        <value>Quote status</value>
-    </data>
-    <data name="REPORT_LINK" xml:space="preserve">
-        <value>Report link</value>
-    </data>
-    <data name="STATUS_CLEANUP" xml:space="preserve">
-        <value>Status cleanup</value>
-    </data>
-    <data name="STATUS_REPORT" xml:space="preserve">
-        <value>Status report</value>
-    </data>
-    <data name="TOTAL_AMOUNT" xml:space="preserve">
-        <value>Total amount</value>
-    </data>
-    <data name="TOTAL_TAX" xml:space="preserve">
-        <value>Total Tax</value>
-    </data>
-  <data name="QuoteListTitle.Text" xml:space="preserve">
-    <value>Quotes List</value>
+  <data name="MTFilterGrid1Resource1.ToolTip" xml:space="preserve">
+    <value>Product Offerings List</value>
+  </data>
+  <data name="NO_RECORDS_TEXT" xml:space="preserve">
+    <value>No records found.</value>
+  </data>
+  <data name="PageResource1.Title" xml:space="preserve">
+    <value>MetraNet</value>
+  </data>
+  <data name="TEXT_ACTIONS" xml:space="preserve">
+    <value>Actions</value>
+  </data>
+  <data name="TEXT_AVAILABLE_ENDDATE" xml:space="preserve">
+    <value>Available End Date</value>
+  </data>
+  <data name="TEXT_AVAILABLE_STARTDATE" xml:space="preserve">
+    <value>Available Start Date</value>
+  </data>
+  <data name="TEXT_CREATE_PRODUCTOFFERING" xml:space="preserve">
+    <value>Create Product Offering</value>
+  </data>
+  <data name="TEXT_CURRENCY" xml:space="preserve">
+    <value>Currency</value>
+  </data>
+  <data name="TEXT_DESCRIPTION" xml:space="preserve">
+    <value>Description</value>
+  </data>
+  <data name="TEXT_DISPLAY_NAME" xml:space="preserve">
+    <value>Display Name</value>
+  </data>
+  <data name="TEXT_EFFECTIVE_ENDDATE" xml:space="preserve">
+    <value>Effective End Date</value>
+  </data>
+  <data name="TEXT_EFFECTIVE_STARTDATE" xml:space="preserve">
+    <value>Effective Start Date</value>
+  </data>
+  <data name="TEXT_EXTERNALINFORMATIONURL" xml:space="preserve">
+    <value>External Information URL</value>
+  </data>
+  <data name="TEXT_GLCODE" xml:space="preserve">
+    <value>GL Code</value>
+  </data>
+  <data name="TEXT_INTERNALINFORMATIONURL" xml:space="preserve">
+    <value>Internal Information URL</value>
+  </data>
+  <data name="TEXT_ISHIDDEN" xml:space="preserve">
+    <value>Hidden</value>
+  </data>
+  <data name="TEXT_NAME" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="TEXT_PartitionID" xml:space="preserve">
+    <value>Partition Id</value>
   </data>
 </root>
