FEAT-3300:"View subscription details when approving a subscription create or update" Task FEAT-3464:"Moving style from code to CSS file"
1. Styles moved to .css file;
2. Added .bat file to apply last UI MT Control changes;
3. Metric Name label localized.

Code Reviewer: RPuzikov

--- a/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.it.resx
+++ b/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.it.resx
@@ -141,4 +141,7 @@
   <data name="UDRC_SECTION_NAME" xml:space="preserve">
     <value>[it] Product Offering Recurring Change Metrics</value>
   </data>
+  <data name="UDRC_NAME" xml:space="preserve">
+    <value>[it] Metric Name</value>
+  </data>
 </root>
