--- a/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.es.resx
+++ b/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.es.resx
@@ -141,4 +141,7 @@
   <data name="UDRC_SECTION_NAME" xml:space="preserve">
     <value>[es] Product Offering Recurring Change Metrics</value>
   </data>
+  <data name="UDRC_NAME" xml:space="preserve">
+    <value>[es] Metric Name</value>
+  </data>
 </root>
