--- a/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.pt-BR.resx
+++ b/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.pt-BR.resx
@@ -141,4 +141,7 @@
   <data name="UDRC_SECTION_NAME" xml:space="preserve">
     <value>[pt-BR] Product Offering Recurring Change Metrics</value>
   </data>
+  <data name="UDRC_NAME" xml:space="preserve">
+    <value>[pt-BR] Metric Name</value>
+  </data>
 </root>
