CORE-7441 Breadcrumb control when used for BMEs is confusing when there is a single level. Code reviewed by dgaz.

--- a/App_GlobalResources/Resource.de.resx
+++ b/App_GlobalResources/Resource.de.resx
@@ -217,7 +217,7 @@
     <value>&amp;nbsp;&gt;&amp;nbsp;</value>
   </data>
   <data name="TEXT_BREAD_CRUMB_SPACER" xml:space="preserve">
-    <value>&amp;nbsp;&amp;nbsp;</value>
+    <value>&lt;br&gt;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;</value>
   </data>
   <data name="TEXT_CANCEL" xml:space="preserve">
     <value>Abbrechen</value>
