--- a/App_GlobalResources/MainMenu.fr.resx
+++ b/App_GlobalResources/MainMenu.fr.resx
@@ -564,6 +564,9 @@
   <data name="TEXT_VERSION_INFO" xml:space="preserve">
     <value>Informations sur la version</value>
   </data>
+  <data name="TEXT_VIEW_CREDIT_NOTES_ISSUED" xml:space="preserve">
+        <value>{FR}View Credit Notes Issued</value>
+    </data>
   <data name="TEXT_VIEW_METERING_STATISTICS" xml:space="preserve">
     <value>Afficher</value>
   </data>
