--- a/App_GlobalResources/MainMenu.it.resx
+++ b/App_GlobalResources/MainMenu.it.resx
@@ -558,6 +558,9 @@
     <data name="TEXT_VERSION_INFO" xml:space="preserve">
         <value>Informazioni sulla versione</value>
     </data>
+	<data name="TEXT_VIEW_CREDIT_NOTES_ISSUED" xml:space="preserve">
+        <value>{IT}View Credit Notes Issued</value>
+    </data>
     <data name="TEXT_VIEW_METERING_STATISTICS" xml:space="preserve">
         <value>Visualizza</value>
     </data>
