FEAT-3300:"View subscription details when approving a subscription create or update" Task FEAT-3463:"[Issue] Unable approve subs with no end date"
1. Allow EndDate = Null, Display "No End Date" for this case;
2. Correct retrieving UDRC logic for Create case;

--- a/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.es-mx.resx
+++ b/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.es-mx.resx
@@ -144,4 +144,7 @@
   <data name="UDRC_NAME" xml:space="preserve">
     <value>[es-mx] Metric Name</value>
   </data>
+  <data name="NO_END_DATE" xml:space="preserve">
+    <value>[es-mx] No End Date</value>
+  </data>
 </root>
