--- a/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.pt-BR.resx
+++ b/ApprovalFrameworkManagement/ChangeTypeViewers/App_LocalResources/ViewSubscriptionChangeDetails.aspx.pt-BR.resx
@@ -144,4 +144,7 @@
   <data name="UDRC_NAME" xml:space="preserve">
     <value>[pt-BR] Metric Name</value>
   </data>
+  <data name="NO_END_DATE" xml:space="preserve">
+    <value>[pt-BR] No End Date</value>
+  </data>
 </root>
