--- a/config/localization/metratech.com/metratech.com_businessentity_da.xml
+++ b/config/localization/metratech.com/metratech.com_businessentity_da.xml
@@ -1,31 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <mt_config>
-  <language_code>jp</language_code>
+  <language_code>da</language_code>
   <locale_space name="metratech.com/BusinessEntity">
     <locale_entry>
       <Name>metratech.com/BusinessEntity/BusinessEntityExtension/Acme</Name>
-      <Value>頂点</Value>
+      <Value>metratech.com/BusinessEntity/BusinessEntityExtension/Acme</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/BusinessEntity/BusinessEntityExtension/Core</Name>
-      <Value>コア</Value>
+      <Value>metratech.com/BusinessEntity/BusinessEntityExtension/Core</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/BusinessEntity/BusinessEntityExtension/Messaging</Name>
-      <Value>メッセージ処理</Value>
-    </locale_entry>
-    <locale_entry>
-      <Name>metratech.com/BusinessEntity/BusinessEntityExtension/smoketest</Name>
-      <Value>smoketest</Value>
+      <Value>metratech.com/BusinessEntity/BusinessEntityExtension/Messaging</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/BusinessEntity/BusinessEntityExtension/MetraTech.Account</Name>
       <Value>metratech.com/BusinessEntity/BusinessEntityExtension/MetraTech.Account</Value>
-    </locale_entry>
-    <locale_entry>
-      <Name>metratech.com/BusinessEntity/BusinessEntityExtension/MetraTech.SmokeTest</Name>
-      <Value>metratech.com/BusinessEntity/BusinessEntityExtension/MetraTech.SmokeTest</Value>
     </locale_entry>
     <locale_entry>
       <Name>metratech.com/BusinessEntity/BusinessEntityExtension/MetraTech.Core</Name>
@@ -34,6 +26,14 @@
     <locale_entry>
       <Name>metratech.com/BusinessEntity/BusinessEntityExtension/MetraTech.Reporting</Name>
       <Value>metratech.com/BusinessEntity/BusinessEntityExtension/MetraTech.Reporting</Value>
+    </locale_entry>
+    <locale_entry>
+      <Name>metratech.com/BusinessEntity/BusinessEntityExtension/MetraTech.SmokeTest</Name>
+      <Value>metratech.com/BusinessEntity/BusinessEntityExtension/MetraTech.SmokeTest</Value>
+    </locale_entry>
+    <locale_entry>
+      <Name>metratech.com/BusinessEntity/BusinessEntityExtension/smoketest</Name>
+      <Value>metratech.com/BusinessEntity/BusinessEntityExtension/smoketest</Value>
     </locale_entry>
   </locale_space>
 </mt_config>
