--- a/config/localization/metratech.com/metratech.com_businessentity_us.xml
+++ b/config/localization/metratech.com/metratech.com_businessentity_us.xml
@@ -31,5 +31,9 @@
       <Name>metratech.com/BusinessEntity/BusinessEntityExtension/MetraTech.Core</Name>
       <Value>metratech.com/BusinessEntity/BusinessEntityExtension/MetraTech.Core</Value>
     </locale_entry>
+    <locale_entry>
+      <Name>metratech.com/BusinessEntity/BusinessEntityExtension/MetraTech.Reporting</Name>
+      <Value>metratech.com/BusinessEntity/BusinessEntityExtension/MetraTech.Reporting</Value>
+    </locale_entry>
   </locale_space>
 </mt_config>
